installed gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ashwini913.github.io",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0",
     "lodash": "^4.17.21",
     "material-ui-search-bar": "^1.0.0",
     "react": "^18.2.0",
@@ -26,6 +28,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
